--- a/templates/Product/list.html.twig
+++ b/templates/Product/list.html.twig
@@ -1,10 +1,17 @@
-<ul>
+{% extends 'base.html.twig' %}
 
-    {% block body %}
+
+
+{% block body %}
+    <ul>
         {% for product in products %}
-            <li>{{ product.name }}</li>
+            <li>
+                <a href="{{ path('product', {id: product.id}) }}">
+                    {{ product.name }}
+                </a>
+            </li>
         {% endfor %}
-    {% endblock %}
+    </ul>
+{% endblock %}
 
-</ul>
 
