--- a/templates/Product/get.html.twig
+++ b/templates/Product/get.html.twig
@@ -7,7 +7,7 @@
         <big>{{ product.euroPrice }}€</big>
     </h2>
     <p>
-        {{ product.description }}
+        {{ product.description | raw }}
     </p>
 {% endblock %}
 
