Added basic image management

--- a/templates/Product/get.html.twig
+++ b/templates/Product/get.html.twig
@@ -6,6 +6,7 @@
         Seulement
         <big>{{ product.euroPrice }}€</big>
     </h2>
+    <img src="/uploads/{{ product.image }}" />
     <p>
         {{ product.description | raw }}
     </p>
